--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -5,7 +5,23 @@
   <%= f.text_field :title %>
   <br />
 
+  <%= f.label :artist_name, "Artist Name" %>
+  <%= f.text_field :artist_name %><br />
+
+  <%= f.label "Choose your Genre" %>
+  <%= f.select :genre_id, options_from_collection_for_select(Genre.all, "id", "name") %>
+
+
+  <%= f.fields_for :notes do |n| %>
+    <%= n.label :content %>
+    <%= n.text_field :content %><br />
+  <% end  %>
+
   <%= f.submit %>
 <% end %>
 
 
+  <%# - A text input box that sets the `Song`'s title.
+  - A text input box for the `Artist`.
+  - A selection box for `Genre`. Users should be able to pick amongst existing genres only.
+  - Several text input boxes to add notes to the song. %>
